--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -33,6 +33,6 @@
   - firstname: ["Max"]
     url: https://en.wikipedia.org/wiki/Max_Planck
 
-"li":
-  - firstname: ["Jinming"]
+"peng":
+  - firstname: ["Yaxin"]
     url: https://jinming-li.github.io/
